# tetrix

./: .gitignore  Cargo.toml  Makefile  README.md
migrations/schemas/: 20240820130744_INIT.sql
mk/: app.mk  cargo.mk  common.mk  curl.mk  psql.mk  rustup.mk  sqlx.mk
src/: api.rs  app_state.rs  const.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  router.rs  settings.rs  version.rs
src/api/: endpoints.rs  errors.rs  id.rs  models.rs  router.rs  state.rs
src/api/endpoints/: arch.rs  version.rs
src/api/models/: arches.rs
src/db/: pg.rs
src/models/: arch.rs  pgerr.rs
tests/: version.rs
