[package]
authors = ["Anton Romanov <a.romanovich86@gmail.com>"]
description = "Tetrix simplifies the customization of any environment: local development environment, CI/CD environment and so on."
edition = "2021"
exclude = [".gitignore"]
keywords = ["variables", "orchestrator", "template", "processor", "environment"]
license = "Apache-2.0"
name = "tetrix"
readme = "README.md"
repository = "https://github.com/carmenere/tetrix"
rust-version = "1.79.0"
version = "0.0.1"

[lib]
name = "tlib"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.4", features = ["macros"]}
axum-extra = { version = "0.9.3", features = ["typed-header"]}
env_logger = { version = "0.11.2" }
log = { version =  "0.4.20" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
sqlx = { version = "0.7.3" , default_features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"]}
tokio = { version = "1", features = ["full"] }
tower-http = {version = "=0.5.2", features = ["trace"]}
const_format = "=0.2.32"

[dev-dependencies]
httpc-test = "0.1.9"
reqwest = "0.11.24"

[profile.release]
strip = "symbols"

[profile.dev]
opt-level = 3
debug = 1
